# cubecli

./: .gitignore  .golangci.yml  .goreleaser.yaml  LICENSE  Makefile  README.md  go.mod  go.sum  install.sh  main.go  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yaml
cmd/: root.go  update.go  version.go
cmd/baremetal/: baremetal.go  model.go  monitoring.go  power.go  reinstall.go
cmd/cdn/: cdn.go  metrics.go  origin.go  plan.go  rule.go  waf.go
cmd/config/: config.go
cmd/ddosattack/: ddosattack.go
cmd/dns/: dns.go  record.go  soa.go
cmd/floatingip/: floatingip.go
cmd/kubernetes/: addon.go  kubernetes.go  node_pool.go
cmd/lb/: healthcheck.go  lb.go  listener.go  plan.go  target.go
cmd/location/: location.go
cmd/network/: network.go
cmd/profile/: profile.go
cmd/project/: project.go
cmd/sshkey/: sshkey.go
cmd/vps/: backup.go  iso.go  plan.go  power.go  template.go  vps.go
cubecli/: __main__.py  api_client.py  config.py  main.py  utils.py
cubecli/commands/: baremetal.py  cdn.py  config.py  ddos_attack.py  dns.py  floating_ip.py  loadbalancer.py  location.py  network.py  project.py  ssh_key.py  update.py  vps.py
cubecli/schemas/: network.py  project.py  ssh_key.py  vps.py
internal/api/: client.go  errors.go
internal/cmdutil/: cmdutil.go
internal/config/: config.go
internal/output/: color.go  format.go  progress.go  spinner.go  table.go
